# society-analysis-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_OVERVIEW.md  PROJECT_REDESIGN_V2.md  README.md  complete_project_transformation_plan.md  config.py  docker-compose.yml  fixes_and_solutions(1).md  interactive_agent_transformation_plan_skills_mcp.md  main.py  openclaw.json  pyproject.toml  society-multimodal-project-plan.md  ui_design_plan.md  workflow.md
agents/: __init__.py  ablation_runner.py  analysis.py  chat_orchestrator.py  claim_extractor.py  community.py  conversation_compactor.py  counter_message.py  critic.py  entity_extractor.py  ingestion.py  kg_analytics.py  knowledge.py  multimodal_agent.py  official_ingestion_pipeline.py  plan_verifier.py  planner.py  planner_v2.py  post_dedup.py  precompute_pipeline.py  precompute_pipeline_v2.py  quality_critic.py  query_rewriter.py  report.py  report_writer.py  risk.py  router.py  schema_agent.py  topic_clusterer.py  visual.py
api/: __init__.py  app.py
api/routes/: admin_import.py  admin_nl2sql.py  artifacts.py  chat.py  health.py  plan.py  reflection.py  retrieve.py  runs.py
capabilities/: __init__.py  base.py  claim_status_capability.py  emotion_insight_capability.py  explain_decision_capability.py  propagation_insight_capability.py  run_compare_capability.py  topic_overview_capability.py  visual_summary_capability.py
config/: official_sources.yaml  scheduler_tasks.yaml
db/: migrate.py  schema.sql  schema_v2.sql
docs/: architecture.md  demo_script.md  final_project_summary.md  kg_redesign_plan.md  phase1_dep_audit.md  phase2_done.md  phase3_done.md  phase4_done.md  phase5_done.md  review.md  ui_admin_import.md
eval/: EVAL_PLAN_V2.md  eval_claim_verify.py  eval_e2e.py  eval_echo_chamber.py  eval_emotion.py  eval_kg.py  eval_nl2sql.py  eval_planner.py  eval_propagation.py  eval_rag.py  eval_report.py  run_eval.py  utils.py  visualize_results.py
eval/ground_truth/: claim_verify_gt.json  e2e_gt.json  echo_chamber_gt.json  emotion_gt.json  gt_validation_log.json  kg_gt.json  nl2sql_gt.json  planner_gt.json  propagation_gt.json  rag_gt.json
eval/results/: eval_dashboard.html
models/: __init__.py  branch_output.py  chat.py  claim.py  community.py  counter_effect.py  entity.py  evidence.py  immunity.py  manifest.py  module_card.py  official_chunk.py  persuasion.py  post.py  query.py  reflection.py  report.py  report_v2.py  risk_assessment.py  schema_proposal.py  session.py
sample_runs/: README.md
sample_runs/run_fixed_claims_baseline/: metrics.json  report.md  report_raw.json  run_manifest.json
sample_runs/run_live_demo/: metrics.json  report.md  report_raw.json  run_manifest.json
scripts/: bootstrap.sh  cleanup_kuzu_orphans.py  data_admin.py  decay_chroma_experience.py  migrate_run_lineage.py  migrate_topic_post_count_trigger.py  rebuild_chroma2_schema.py  scheduler.py  scheduler_tasks.example.yaml  seed_claims_nl2sql_examples.py  seed_emotion_nl2sql_examples.py  seed_knowledge.py  seed_planner_memory.py  telegram_find_channels.py  telegram_login.py
services/: __init__.py  actionability_service.py  answer_composer.py  bm25_cache.py  chroma_collections.py  chroma_service.py  claude_vision_service.py  cli.py  counter_effect_service.py  embeddings_service.py  intervention_decision_service.py  kg_cache.py  kuzu_service.py  manifest_service.py  metrics.py  metrics_service.py  monitor_service.py  news_search_service.py  nl2sql_memory.py  planner_memory.py  postgres_service.py  reddit_service.py  reflection_store.py  schema_sync.py  session_store.py  stable_diffusion_service.py  telegram_service.py  whisper_service.py  wikipedia_service.py  x_api_service.py
skills/campaign-report-build/: SKILL.md
skills/cascade-predict/: SKILL.md
skills/claim-retrieve/: SKILL.md
skills/community-detect/: SKILL.md
skills/counter-effect-track/: SKILL.md
skills/counter-message-build/: SKILL.md
skills/counter-visual-generate/: SKILL.md
skills/critic-review/: SKILL.md
skills/emotion-analyze/: SKILL.md
skills/entity-extract/: SKILL.md
skills/image-post-ingest/: SKILL.md
skills/immunity-strategy/: SKILL.md
skills/meme-persuasion-analyze/: SKILL.md
skills/misinfo-risk-review/: SKILL.md
skills/propagation-analyze/: SKILL.md
skills/realtime-monitor/: SKILL.md
skills/x-post-ingest/: SKILL.md
tests/: test_bm25_cache.py  test_functional.py  test_kg_analytics_v2.py  test_metrics.py  test_phase1_chat.py  test_phase1_v2.py  test_phase2_chat.py  test_phase2_v2.py  test_phase3_chat.py  test_phase3_v2.py  test_phase4_v2.py  test_phase5_v2.py  test_phase6_context.py  test_phase_c_routing.py  test_pipeline_transactions.py  test_plan_verifier.py  test_schema_consistency.py
tests/fixtures/: claims_conspiracy_baseline.json  posts_v2_reply_chain.jsonl  posts_v2_smoke.jsonl
tools/: __init__.py  base.py  claim_search.py  decision_tools.py  evidence_tools.py  graph_tools.py  hybrid_retrieval.py  kg_query_tools.py  nl2sql_tools.py  run_query_tools.py  topic_resolver.py  visual_tools.py
ui/: api_client.py  streamlit_app.py
ui/components/: analysis_tabs.py  chat_response.py  community_graph.py  emotion_chart.py  metric_cards.py
ui/pages/: 0_Chat.py  1_Run_List.py  2_Run_Detail.py  3_Reflection.py
(+20 files in other folders)
