[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "society-multimodal-propagation"
version = "0.1.0"
description = "Multimodal Social Media Propagation Analysis and Counter-Messaging System"
requires-python = ">=3.10"
dependencies = [
    # Anthropic
    "anthropic>=0.40.0",
    # Database
    "psycopg2-binary>=2.9.9",
    "kuzu>=0.7.0",
    # Vector store
    "chromadb>=0.5.0",
    # Embeddings (OpenAI text-embedding-3-small)
    "openai>=1.0.0",
    # X API v2
    "tweepy>=4.14.0",
    # Image processing
    "pillow>=10.0.0",
    # Stable Diffusion
    "diffusers>=0.27.0",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "accelerate>=0.28.0",
    # Data / utilities
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "structlog>=24.1.0",
    # News search (authoritative evidence fetching)
    "ddgs>=9.0.0",
    "beautifulsoup4>=4.12.0",
    # Phase 1: social network analysis
    "networkx>=3.0",
    "python-louvain>=0.16",
    # Research UI (read-only)
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "streamlit>=1.34.0",
    "plotly>=5.20.0",
    "pyvis>=0.3.2",
    "requests>=2.31.0",
]
