[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "society-analysis"
version = "2.0.0"
description = "Society analysis - real-time multi-source retrieval (RAG/SQL/KG) over Reddit + authoritative news, with NL2SQL + reflection-driven self-curation."
requires-python = ">=3.10"
dependencies = [
    # ── LLM + embedding ───────────────────────────────────────────────────────
    "openai>=1.0.0",
    "anthropic>=0.40.0",                # Claude Vision (multimodal_agent)

    # ── Storage ───────────────────────────────────────────────────────────────
    "psycopg2-binary>=2.9.9",           # Postgres v2 tables + tsvector
    "kuzu>=0.7.0",                      # Graph store (User/Post/Topic/Entity)
    "chromadb>=0.5.0",                  # Three vector collections

    # ── Hybrid retrieval (Branch A) ───────────────────────────────────────────
    "rank-bm25>=0.2.2",                 # BM25 recall over dense subset
    "sentence-transformers>=3.0.0",     # bge-reranker-base local rerank

    # ── Data + utilities ──────────────────────────────────────────────────────
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "tenacity>=8.3.0",
    "structlog>=24.1.0",
    "pyyaml>=6.0",                      # config/official_sources.yaml

    # ── Topic clustering (Branch precompute) ─────────────────────────────────
    "scikit-learn>=1.3.0",              # KMeans
    "numpy>=1.24.0",

    # ── KG analytics (Phase B) ───────────────────────────────────────────────
    "networkx>=3.0",                    # PageRank / betweenness
    "python-louvain>=0.16",             # Community detection

    # ── Multimodal ────────────────────────────────────────────────────────────
    "pillow>=10.0.0",

    # ── Official source ingestion ────────────────────────────────────────────
    "feedparser>=6.0.0",                # RSS parsing
    "ddgs>=9.0.0",                      # DuckDuckGo (NewsSearchService)
    "beautifulsoup4>=4.12.0",           # Article HTML cleanup

    # ── Reddit / Telegram (community ingestion) ──────────────────────────────
    "telethon>=1.34.0",

    # ── HTTP + UI ─────────────────────────────────────────────────────────────
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "streamlit>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
