[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "society-analysis"
version = "2.0.0"
description = "Society analysis over Reddit and authoritative news, with RAG, NL2SQL, KG analytics, and reflection-driven self-curation."
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "psycopg2-binary>=2.9.9",
    "kuzu>=0.7.0",
    "chromadb>=0.5.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "tenacity>=8.3.0",
    "structlog>=24.1.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "networkx>=3.0",
    "python-louvain>=0.16",
    "pillow>=10.0.0",
    "feedparser>=6.0.0",
    "ddgs>=9.0.0",
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "streamlit>=1.34.0",
    "streamlit-agraph>=0.0.45",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools]
py-modules = ["config", "main"]

[tool.setuptools.packages.find]
include = [
    "agents*",
    "api*",
    "models*",
    "scripts*",
    "services*",
    "tools*",
    "ui*",
]
exclude = [
    "data*",
    "db*",
    "docs*",
    "tests*",
]
namespaces = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
